[gd_scene load_steps=3 format=3 uid="uid://cl4h3jy3xi5av"]

[ext_resource type="Script" path="res://Stages/UI/level_select/level_card.gd" id="1_card_script"]
[ext_resource type="Theme" uid="uid://b8k2vgj8hxk5r" path="res://Config/ztd_ui_theme.tres" id="2_theme"]

[node name="LevelCard" type="PanelContainer"]
custom_minimum_size = Vector2(600, 0)
theme = ExtResource("2_theme")
script = ExtResource("1_card_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelName" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Level Name"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
text = "‚≠ê"
horizontal_alignment = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level description goes here."
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "Best Time: 5:30 | Best Score: 1000"

[node name="LockMessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "Complete Level X to unlock"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "PLAY"
